# Chaindeck-apiDeployment

./: README.md  chaindeck-api-deployment.yaml  runserver.py  sql_app.db~
chaindeck-api-main/: Dockerfile  README.md  chaindeck-api-deployment.yaml  clickhouse-deployment.yaml  pyproject.toml  script.sh  secrets.yaml
chaindeck-api-main/chaindeck-api/: Chart.yaml  values.yaml  values1.yaml
chaindeck-api-main/chaindeck-api/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml
chaindeck-api-main/chaindeck-api/templates/tests/: test-connection.yaml
chaindeck-api-main/prometheus_fast_api/: __init__.py
chaindeck-api-main/prometheus_fast_api/models/: User.py  __init__.py  common.py
chaindeck-api-main/prometheus_fast_api/repositories/: node.py  user.py
chaindeck-api-main/prometheus_fast_api/schemas/: auth.py  node.py  query.py  reset_password.py  user.py
chaindeck-api-main/prometheus_fast_api/services/: auth.py
chaindeck-api-main/prometheus_fast_api/supertokens/: __init__.py
chaindeck-api/templates/: NOTES.txt  service.yaml  serviceaccount.yaml
prometheus_fast_api/: main.py  pyproject.toml
prometheus_fast_api/models/: Node.py  ResetPassword.py
prometheus_fast_api/repositories/: reset_password.py
prometheus_fast_api/services/: config.py  logging.py
prometheus_fast_api/supertokens/: jwt_creation.py
prometheus_fast_api/yaml/: deployment.yaml  service.yaml
