[tool.poetry]
name = "prometheus-fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prometheus_fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
prometheus-api-client = "^0.5.2"
requests = "^2.28.1"
supertokens-python = "^0.11.8"
nest-asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "runserver:main"